# Excel2Json

./: .gitignore  CHANGELOG.md  Dockerfile  Excel2Json.py  ExcelCleaner.py  LocClient.py  README.md  ValueSync.py  __init__.py  cli.py  docker-compose.yaml  example.py  example_insert.py  example_sync.py  mongo_auth.json  pyproject.toml  requirements.txt
.github/workflows/: python-build.yml  python-package.yml
dev/: ExcelCleaner.py
dictionaries/: mongo_auth.json
docker-init/: dev.collections.js
docs/: CLI.md
examples/: README.md
src/Excel2Json/: Excel2Json.py  LocClient.py  ValueSync.py  __main__.py  cli.py  types.py
src/Excel2Json/dev/: ExcelCleaner.py
src/Excel2Json/types/: collection.py  dictionary.py
tests/: test_roles.py  test_sync.py
