[project]
name = "Excel2Json"
version = "0.1.0"
description = "Repo for the metadata excel table clean-up and parsing script"
authors = [
    { name = "Neeraj Viswajith" },
    { name = "Oliver Baumann" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pymongo>=4.7.3",
    "openpyxl>=3.1.5",
    "wasabi>=1.1.3",
    "requests>=2.32.3",
    "typer>=0.12.3",
    "typing-extensions>=4.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "black>=24.8.0",
    "pyflakes>=3.2.0",
    "flake8>=7.1.0",
    "autopep8>=2.3.1",
    "pytest-testdox>=3.1.0",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "mongomock @ git+https://github.com/mongomock/mongomock.git",
    "pytest-schema>=0.1.2",
    "mypy>=1.11.1",
    "types-requests>=2.32.0.20240712",
    "pandas-stubs>=2.2.2.240807",
]

[tool.rye.scripts]
requirements = "sed '/^-e/d; /^#/d; /^$/d' requirements-dev.lock"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/Excel2Json"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--testdox"
]
